ocaml/testsuite/tests/templates/basic/bad_instance_arg_name_not_found.reference
File "bad_instance_arg_name_not_found.ml", line 2, characters 2-35:
2 |   Monoid_utils(Banana)(List_monoid) [@jane.non_erasable.instances]
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: "Banana" is not a valid parameter for the module "Monoid_utils".
Hint: Valid parameters for "Monoid_utils": "Monoid"
